# ChangeLog for app-editors/bluefish
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.24 2003/11/02 11:27:39 hanno Exp $

  02 Nov 2003; Hanno Boeck <hanno@gentoo.org> bluefish-0.11.ebuild:
  Fix for menu icon in gnome (bug 31770).

*bluefish-0.11 (05 Aug 2003)

  05 Aug 2003; Luca Barbato <lu_zero@gentoo.org> bluefish-0.11.ebuild :
  Version bump, thanks to Nicolas Kaiser <nikai@nikai.net> for the 
  notice

*bluefish-0.10 (21 Jul 2003)

  25 Jul 2003; foser <foser@gentoo.org> bluefish-0.10.ebuild :
  deps correction

  21 Jul 2003; Nick Hadaway <raker@gentoo.org> bluefish-0.10.ebuild:
  Got rid of the sed mess.  Changed the install stanza accordingly.
  Added nls and spell USE variables.

  22 May 2003; Jason Wever <weeve@gentoo.org> bluefish-0.9.ebuild:
  Changed ~sparc keyword to sparc.

*bluefish-0.9 (18 Feb 2003)

  05 Apr 2003; Lars Weiler <pylon@gentoo.org> bluefish-0.9.ebuild:
  Set ppc in KEYWORDS

  20 Feb 2003; Luca Barbato <lu_zero@gentoo.org> bluefish-0.9.ebuild :
  Make it install the .desktop file

  19 Feb 2003; foser <foser@gentoo.org> bluefish-0.9.ebuild :
  Fixes to DEP/USE

  18 Feb 2003; Luca Barbato <lu_zero@gentoo.org> bluefish-0.9.ebuild :
  New version

  17 Dec 2002; Hanno Boeck <hanno@gentoo.org> bluefish-0.8.ebuild :
  Added libpcre to dependency, resolves bug #12270.

*bluefish-0.8 (14 Dec 2002)

  14 Dec 2002; Hanno Boeck <hanno@gentoo.org> bluefish-0.8.ebuild :
  New version supporting GTK 2.
  Snapshots of gtk2 port removed.  

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*bluefish-2002.11.17 (17 Nov 2002)

  09 Dec 2002; Seemant Kulleen <seemant@gentoo.org>
  bluefish-2002.11.17.ebuild :

  sandbox violation fix. nesta in #gentoo pointed it out.

  17 Nov 2002; Hanno Boeck <hanno@gentoo.org> bluefish-2002.11.17.ebuild :
  New version of gtk2 port.
