@@ -1,12 +1,8 @@
-MD5 745c86a5659c1d44a29523420cb99da4 bluefish-0.7-r3.ebuild 1139
 MD5 302318ab6a55963aa5f7e9a30be6ed5d bluefish-0.9.ebuild 1019
-MD5 a90f421a844205507990ef16313a71a9 ChangeLog 3469
-MD5 fff53d12c7cda74821127e1cb0bddb80 bluefish-0.11.ebuild 1416
-MD5 5be71a473b05133ddbe7903f1a7a8dbc bluefish-0.8.ebuild 987
-MD5 57d37af3f7a3050d0231181259411b22 bluefish-0.10.ebuild 1328
+MD5 efe259709d927635aada3769f452bb94 ChangeLog 3584
+MD5 0640ee140f7b4258c689809f143c956c bluefish-0.12.ebuild 1416
+MD5 e0d63cc51c5707a07bd3f4a4b16a0074 bluefish-0.11.ebuild 1415
 MD5 a72a06a37ca4e5905085ebff07fe9e9e metadata.xml 217
 MD5 bc9b63ac2469bf96338ac088068828da files/digest-bluefish-0.9 65
-MD5 35e10591590d703d0c8571848ee228de files/digest-bluefish-0.10 66
-MD5 300af71b8263dedc97e775291b4e24b8 files/digest-bluefish-0.8 70
+MD5 e60836fae74fcfb183148e9df9dc75df files/digest-bluefish-0.12 66
 MD5 ec89a2b6c6e9739aae723eb9c35db6aa files/digest-bluefish-0.11 66
-MD5 bd2f60953e3d3c182ef12e3f0a155ee2 files/digest-bluefish-0.7-r3 66
