@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/bluefish/Attic/bluefish-0.11.ebuild,v 1.3 2003/11/02 11:27:39 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/bluefish/Attic/bluefish-0.11.ebuild,v 1.4 2003/11/25 22:56:51 hanno Exp $
 
 IUSE="nls spell"
 
@@ -9,7 +9,7 @@ SRC_URI="http://pkedu.fbt.eitn.wau.nl/~olivier/downloads/${P}.tar.bz2"
 HOMEPAGE="http://bluefish.openoffice.nl/"
 
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~sparc"
+KEYWORDS="x86 ~ppc ~sparc"
 SLOT="0"
 
 RDEPEND=">=x11-libs/gtk+-2
