@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/bluefish
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.24 2003/11/02 11:27:39 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.25 2003/11/25 22:56:51 hanno Exp $
+
+*bluefish-0.12 (25 Nov 2003)
+
+  25 Nov 2003; Hanno Boeck <hanno@gentoo.org> bluefish-0.12.ebuild:
+  Version bump.
 
   02 Nov 2003; Hanno Boeck <hanno@gentoo.org> bluefish-0.11.ebuild:
   Fix for menu icon in gnome (bug 31770).
